Fix layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ a:focus {
 
 .row {
   margin: 25px 0; /* 25px top and bottom, 0 left and right */
+  clear: both;
 }
 
 .col-md-6 {
@@ -157,4 +158,8 @@ a:focus {
 .navtoggle {
   display: flex;
   justify-content: space-between;
+}
+
+footer {
+  clear: both;
 }
